header and carousel structure

--- a/index.html
+++ b/index.html
@@ -4,12 +4,45 @@
   <meta charset="UTF-8">
   <title>Tiago Araújo</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  
-  <header></header>
 
-  <section id="carousel"></section>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <h1>
+            <img src="http://via.placeholder.com/100x100" alt="Tiago Araújo" id="logo">
+          </h1>
+        </div>
+        <div class="col-sm-6"></div>
+        <div class="col-sm-2">
+          <button class="btn btn-link">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+      </div>      
+    </div>
+  </header>
+
+  <section id="carousel">
+    <div id="main-carousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="http://via.placeholder.com/1200x400/000000/ffffff" alt="">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#main-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#main-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>    
+  </section>
 
   <section id="team"></section>
 
@@ -25,5 +58,11 @@
 
   <footer></footer>
 
+  <script defer src="assets/js/fontawesome-all.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+
+  <script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
