--- a/index.html
+++ b/index.html
@@ -13,24 +13,29 @@
       <div class="row">
         <div class="col-sm-4">
           <h1>
-            <img src="http://via.placeholder.com/100x100" alt="Tiago Araújo" id="logo">
+            <img src="assets/images/logo.png" alt="Tiago Araújo" id="logo">
           </h1>
         </div>
         <div class="col-sm-6"></div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 text-right">
           <button class="btn btn-link">
-            <i class="fas fa-bars"></i>
+            <img src="assets/images/icons/nav.png" />
           </button>
         </div>
       </div>      
     </div>
   </header>
 
-  <section id="carousel">
+  <div id="cover"></div>
+
+  <!-- <div id="carousel">
     <div id="main-carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="http://via.placeholder.com/1200x400/000000/ffffff" alt="">
+          <img class="d-block w-100" src="assets/images/banner/1.jpg" alt="">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="assets/images/banner/2.jpg" alt="">
         </div>
       </div>
       <a class="carousel-control-prev" href="#main-carousel" role="button" data-slide="prev">
@@ -42,27 +47,222 @@
         <span class="sr-only">Next</span>
       </a>
     </div>    
-  </section>
+  </div> -->
 
-  <section id="team"></section>
+  <div id="team">
+    <div class="container">
+      <div id="team-icon">
+        <img src="assets/images/icons/team.png" width="90" height="60" />
+      </div>
+      <h3 class="title">NOSSA EQUIPE</h3>
+      <div id="team-text">
+        <p>Nossa equipe é formada por advogados e colaboradores gabaritados, com treinamento voltado para garantir o melhor atendimento, e a busca sistemática na resolução das demandas dos nossos clientes. Contamos, ainda, com parcerias multidisciplinares, afim de atuar com excelência nas mais diversas demandas, tudo voltado a maximiza desempenhos e garantir o atendimento dos seus interesses.</p>
+      </div>
+      <div class="row" id="team-list">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-3">
+          <img src="assets/images/thiago.jpg" />
+          <div class="item-name">Thiago Araújo</div>
+          <div class="item-desc">Especializado na área empresarial, tributária e civil</div>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-3">
+          <img src="assets/images/luciane.jpg" />
+          <div class="item-name">Luciane Nunes</div>
+          <div class="item-desc">Especializado na área familiar e trabalhista</div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <section id="expertise"></section>
+</div>
 
-  <section id="ideals"></section>
+<div id="expertise">
+  <div class="container">
+    <div class="section-header-container">
+      <div id="expertise-icon">
+        <img src="assets/images/icons/expertise_title.png" />
+      </div>
+      <h3 class="title">ÁREA DE ATUAÇÃO</h3>
+    </div>
+    <div class="row" id="expertise-list">
+      <div class="col-sm-3">
+        <div class="expertise-item">
+          <div class="expertise-item-icon">
+            <img src="assets/images/icons/expertise_prev.png" />
+          </div>
+          <p class="expertise-item-title">PREVIDENCIÁRIO</p>
+          <p class="expertise-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper sagittis erat ac cursus.</p>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="expertise-item">
+          <div class="expertise-item-icon">
+            <img src="assets/images/icons/expertise_business.png" />
+          </div>
+          <p class="expertise-item-title">EMPRESARIAL</p>
+          <p class="expertise-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper sagittis erat ac cursus.</p>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="expertise-item">
+          <div class="expertise-item-icon">
+            <img src="assets/images/icons/expertise_criminal.png" />
+          </div>
+          <p class="expertise-item-title">CRIMINAL</p>
+          <p class="expertise-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper sagittis erat ac cursus.</p>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="expertise-item">
+          <div class="expertise-item-icon">
+            <img src="assets/images/icons/expertise_work.png" />
+          </div>
+          <p class="expertise-item-title">TRABALHISTA</p>
+          <p class="expertise-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper sagittis erat ac cursus.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-  <section id="contact">
-    <div id="form"></div>
-    <div id="means"></div>
-    <div id="map"></div>
-  </section>
+<div id="ideals">
+  <div class="container">
+    <div id="ideals-icon">
+      <img src="assets/images/icons/ideals.png" />
+    </div>
+    <h3 class="title">NOSSOS VALORES</h3>
+    <div id="ideals-text">
+      <p>Somos um escritório de advocacia atuante na defesa dos interesses de nossos clientes nas diversas áreas afetas ao Direito Empresarial e Contratual. Primamos sempre pelo alto padrão de qualidade nos nossos serviços e excelência no atendimento aos nossos clientes, pautados pela ética, seriedade e compromisso.
+      Atuantes desde 2014, sustentamos o orgulho do patrocínio, com sucesso, de grandes causas, não só de ordem litigiosa ou judicial, como também de ordem contratual e negocial. Acreditamos que o sucesso da advocacia reside principalmente na confiança entre o advogado e o cliente, por meio de um trabalho minucioso e de atendimento personalizado, critérios imperiosos para o atingimento do máximo interesse e satisfação, com a obtenção dos resultados desejados..</p>
+    </div>
+    <div class="row" id="ideals-list">
+      <div class="col-sm-4 ideals-item active" data-target="ideal-1">
+        <img src="assets/images/icons/ideals-1.png" class="img-responsive" />
+        <div class="arrow"></div>
+      </div>
+      <div class="col-sm-4 ideals-item" data-target="ideal-2">
+        <img src="assets/images/icons/ideals-2.png" class="img-responsive" />
+        <div class="arrow"></div>
+      </div>
+      <div class="col-sm-4 ideals-item" data-target="ideal-3">
+        <img src="assets/images/icons/ideals-3.png" class="img-responsive" />
+        <div class="arrow"></div>
+      </div>
+    </div>
+  </div>
+  <div id="ideals-desc">
+    <div class="container">
+      <div class="ideal-desc" id="ideal-1">
+        <h3>Missão</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sagittis nibh ac nisi pellentesque, at laoreet dui pharetra. Aenean felis nunc, sodales eget tincidunt non, auctor vel augue.</p>
+      </div>
+      <div class="ideal-desc" id="ideal-2">
+        <h3>Visão</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sagittis nibh ac nisi pellentesque, at laoreet dui pharetra. Aenean felis nunc, sodales eget tincidunt non, auctor vel augue</p>
+      </div>
+      <div class="ideal-desc" id="ideal-3">
+        <h3>Destaque</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sagittis nibh ac nisi pellentesque, at laoreet dui pharetra. Aenean felis nunc, sodales eget tincidunt non, auctor vel augue.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
-  <footer></footer>
+<div id="contact">
+  <div class="container">
+    <div id="form">
+      <h3 class="title" id="contact-title">INSCREVA-SE E ENTRAREMOS EM CONTATO</h3>
+      <div class="style-line"></div>
+      <form class="row" action="">
+        <div class="col-sm-4">
+          <input class="form-control" type="text" placeholder="Nome" name="name" />
+        </div>
+        <div class="col-sm-4">
+          <input class="form-control" type="email" placeholder="Email" name="email" />
+        </div>
+        <div class="col-sm-4">
+          <input class="form-control" type="date" placeholder="Data de nascimento" name="birth" />
+        </div>
+        <div class="col-sm-12">
+          <textarea id="message" class="form-control" name="message" rows="8" placeholder="Mensagem"></textarea>
+        </div>
+        <div class="col-sm-12">
+          <button id="form-submit" type="submit">Enviar mensagem</button>
+        </div>
+      </form>
+    </div>
+    <div id="means">
+      <h3 class="title" id="means-title">ONDE NOS ENCONTRAR</h3>
+      <div class="style-line"></div>
+      <div class="row">
+        <div class="col-sm-4">
+          <p>
+            <span class="fa-stack fa-2x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-home fa-stack-1x fa-inverse"></i>
+            </span>
+          </p>
+          <p>Endereço</p>
+          <p>SETOR HOTELEIRO, QUADRA CENTRAL, BLOCO 06, LOJA 04, SOBRADINHO, BRASÍLIA-DF, CEP: 72010-516</p>
+        </div>
+        <div class="col-sm-4">
+          <p>
+            <span class="fa-stack fa-2x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-comment fa-stack-1x fa-inverse"></i>
+            </span>
+          </p>
+          <p>Email</p>
+          <p>advogadosctd@gmail.com</p>
+        </div>
+        <div class="col-sm-4">
+          <p>
+            <span class="fa-stack fa-2x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-phone fa-flip-horizontal fa-stack-1x fa-inverse"></i>
+            </span>
+          </p>
+          <p>Telefones</p>
+          <p>
+            <small>(61)</small> 3387-9476 <br />
+            9.8595-1325 <br />
+            9.8461-6362
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="map">
+  <a target="_blank" href="https://www.google.com.br/maps/place/Centro+de+Refer%C3%AAncia+Especializado+de+Assist%C3%AAncia+Social+-+CREAS+-+Sobradinho/@-15.6384823,-47.8267789,16.5z/data=!4m5!3m4!1s0x935a4062d4823fed:0x807b38c1763e1424!8m2!3d-15.6371457!4d-47.8299383?hl=pt-BR" class="">COMO CHEGAR</a>
+</div>
 
-  <script defer src="assets/js/fontawesome-all.min.js"></script>
+<footer>
+  
+</footer>
+
+<script defer src="assets/js/fontawesome-all.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 
-  <script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script>
+  $(function(){
+    $('.ideal-desc').hide();
+    $('#ideal-1').show();
+    $('.ideals-item').hover(
+      function() {
+        $('.ideals-item').removeClass('active');
+        $('.ideal-desc').hide();
+        $(this).addClass('active');
+        $('#' + this.getAttribute('data-target')).show();
+      },
+      function() {
+      }
+      );
+  });
+</script>
 </body>
 </html>
