--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
           <div class="style-line"></div>
           <form class="row" action="" method="post" id="contact-form">
             <div class="col-sm-4">
-              <input class="form-control" type="text" placeholder="Nome" name="name" />
+              <input class="form-control" required type="text" placeholder="Nome" name="name" />
             </div>
             <div class="col-sm-4">
-              <input class="form-control" type="email" placeholder="Email" name="email" />
+              <input class="form-control" required type="email" placeholder="Email" name="email" />
             </div>
             <div class="col-sm-4">
-              <input class="form-control" type="date" placeholder="Data de nascimento" name="birth" />
+              <input class="form-control" required type="date" placeholder="Data de nascimento" name="birth" />
             </div>
             <div class="col-sm-12">
-              <textarea id="message" class="form-control" name="message" rows="8" placeholder="Mensagem"></textarea>
+              <textarea id="message" required class="form-control" name="message" rows="8" placeholder="Mensagem"></textarea>
             </div>
             <div class="col-sm-12">
               <button id="form-submit" type="submit">Enviar mensagem</button>
@@ -260,7 +260,7 @@
         });
     }();
   drift.SNIPPET_VERSION = '0.3.1';
-  drift.load('s8znn7xauhsn');
+  drift.load('xsh7a9ceaxxt');
 </script>
 <!-- End of Async Drift Code -->
 </body>
